syntax = "proto3";

package apiproto;

message TokenSet {
  // token -> expiry time (epoch nanoseconds)
  map<string, int64> tokens = 1;
}
